webpack prod config changed

--- a/src/index.production.html
+++ b/src/index.production.html
@@ -9,7 +9,7 @@
     <body>
         <div>
             <h1>
-                Hello dev web pack!
+                Hello production web pack!
             </h1>
         </div>        
     </body>
