--- a/src/index.dev.html
+++ b/src/index.dev.html
@@ -4,6 +4,7 @@
         <title>DEV Template</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
