--- a/src/index.dev.html
+++ b/src/index.dev.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/react/dist/react.min.js"></script>
+        <script src="node_modules/react-dom/dist/react-dom.min.js"></script>
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
