--- a/src/index.dev.html
+++ b/src/index.dev.html
@@ -10,7 +10,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div>
+        <div id="root">
             <h1>
                 Hello dev web pack!
             </h1>
