--- a/src/index.production.html
+++ b/src/index.production.html
@@ -7,7 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-        <div>
+        <div id="root">
             <h1>
                 Hello production web pack!
             </h1>
